--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,117 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <nav class = "navbar navbar-expand-lg navbar-dark bg-dark text-white">
+        <div class = "container">
+          <%= link_to new_admin_session_path, class:'navbar-brand p-1' do %>
+            <i class = 'fas fa-store'></i>
+          <% end %>
+          <%= link_to root_path, class:'navbar-brand p-3' do %>
+            <span>連絡ネット</span>
+          <% end %>
+          <button class ="navbar-toggler" type ="button" data-toggle ="collapse" data-target ="#navbarNavDropdown" aria-controls ="navbarNavDropdown" aria-expanded ="false" aria-label ="Toggle navigation">
+            <span class ="navbar-toggler-icon"></span>
+          </button>
+          <div class = "collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class ="navbar-nav ml-auto">
+              <% if request.fullpath.include?("/admin") && admin_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to admin_items_path ,class:'nav-link text-light' do %>
+                    <i class = "fas fa-sharp fa-solid fa-store"></i>
+                    HOME
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to admin_customers_path,class:'nav-link text-light' do  %>
+                    <i class = "fas fa-sharp fa-solid fa-users"></i>
+                    社員一覧
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to admin_root_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-clipboard'></i>
+                    組織一覧
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to admin_genres_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-code-branch'></i>
+                    役職一覧
+                  <% end %>
+                </li>
+                <li class="nav-class">
+                  検索
+                </li>
+                <li class="nav-item">
+                  <%= link_to destroy_admin_session_path,class:'nav-link text-light' ,method: :delete do %>
+                    <i class = 'fas fa-sign-out-alt'></i>
+                    ログアウト
+                  <% end %>
+                </li>
+              <% elsif staff_signed_in? %>
+                <li class="nav-item">
+                  HOME
+                </li>
+                <li class="nav-item">
+                  <%= link_to public_customers_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-id-card'></i>
+                    マイページ
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to public_items_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-store'></i>
+                    社員一覧
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%=link_to public_cart_items_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-cart-arrow-down'></i>
+                    検索
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to destroy_customer_session_path,class:'nav-link text-light' ,method: :delete do %>
+                    <i class = 'fas fa-sign-out-alt'></i>
+                    ログアウト
+                  <% end %>
+                </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to about_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-link'></i>
+                    About
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to new_customer_registration_path,class:'nav-link text-light' do %>
+                    <i class = "fas fa-user-plus"></i>
+                    新規登録
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to new_customer_session_path,class:'nav-link text-light' do %>
+                    <i class = "fas fa-sign-in-alt"></i>
+                    ログイン
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to new_admin_session_path, class:'navbar-brand p-1' do %>
+                    <i class = 'fas fa-store'></i>
+                    管理者ログイン
+                  <% end %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main class="mb-auto">
+      <%= notice %>
+      <%= yield %>
+    </main>
+    <footer></footer>
   </body>
 </html>
