[Update]admin_deviseのルーティング記述修正_2023-0211-2057

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,8 @@
                   <% end %>
                 </li>
                 <li class="nav-class">
+                  <%= link_to admin_search_staff_path,class:'nav-link text-light' do %>
+                  <i class='fas fa-magnifying-glass'></i>
                   検索
                 </li>
                 <li class="nav-item">
