--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <nav class = "navbar navbar-expand-lg navbar-dark bg-dark text-white">
         <div class = "container">
           <%= link_to new_admin_session_path, class:'navbar-brand p-1' do %>
-            <i class = 'fas fa-store'></i>
+            <i class = 'fas fa-sitemap'></i>
           <% end %>
           <%= link_to root_path, class:'navbar-brand p-3' do %>
             <span>連絡ネット</span>
@@ -25,35 +25,38 @@
           </button>
           <div class = "collapse navbar-collapse" id="navbarNavDropdown">
             <ul class ="navbar-nav ml-auto">
+              <!--ヘッダーの条件分岐-->
+              <!--URLに「admin」が含まれるかつadminでサインインしている時-->
               <% if request.fullpath.include?("/admin") && admin_signed_in? %>
                 <li class="nav-item">
                   <%= link_to admin_root_path ,class:'nav-link text-light' do %>
-                    <i class = "fas fa-sharp fa-solid fa-store"></i>
+                    <i class = "fas fa-house"></i>
                     HOME
                   <% end %>
                 </li>
                 <li class="nav-item">
                   <%= link_to admin_staffs_path,class:'nav-link text-light' do  %>
-                    <i class = "fas fa-sharp fa-solid fa-users"></i>
+                    <i class = "fas fa-people-group"></i>
                     社員一覧
                   <% end %>
                 </li>
                 <li class="nav-item">
                   <%= link_to admin_departments_path,class:'nav-link text-light' do %>
-                    <i class = 'fas fa-clipboard'></i>
+                    <i class = 'fas fa-building'></i>
                     組織一覧
                   <% end %>
                 </li>
                 <li class="nav-item">
                   <%= link_to admin_positons_path,class:'nav-link text-light' do %>
-                    <i class = 'fas fa-code-branch'></i>
+                    <i class = 'fas fa-layer-group'></i>
                     役職一覧
                   <% end %>
                 </li>
                 <li class="nav-class">
                   <%= link_to admin_search_staff_path,class:'nav-link text-light' do %>
-                  <i class='fas fa-magnifying-glass'></i>
-                  検索
+                    <i class='fas fa-magnifying-glass'></i>
+                    検索
+                  <% end %>
                 </li>
                 <li class="nav-item">
                   <%= link_to destroy_admin_session_path,class:'nav-link text-light' ,method: :delete do %>
@@ -61,34 +64,34 @@
                     ログアウト
                   <% end %>
                 </li>
+              <!--「一般社員」がログインしている時  -->
               <% elsif staff_signed_in? %>
                 <li class="nav-item">
-                  HOME
-                </li>
-                <li class="nav-item">
-                  <%= link_to public_customers_path,class:'nav-link text-light' do %>
-                    <i class = 'fas fa-id-card'></i>
+                  <!--ログインユーザの詳細ページに飛ばしたい。ここで記述するのか。それともviewページで設定するのか？-->
+                  <%= link_to public_staff_path(current_user),class:'nav-link text-light' do %>
+                    <i class = 'fas fa-addresses-card'></i>
                     マイページ
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to public_items_path,class:'nav-link text-light' do %>
-                    <i class = 'fas fa-store'></i>
+                  <%= link_to public_staffs_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-people-group'></i>
                     社員一覧
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%=link_to public_cart_items_path,class:'nav-link text-light' do %>
-                    <i class = 'fas fa-cart-arrow-down'></i>
+                  <%= link_to public_search_staff_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-magnifying-glass'></i>
                     検索
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to destroy_customer_session_path,class:'nav-link text-light' ,method: :delete do %>
+                  <%= link_to destroy_staff_session_path,class:'nav-link text-light' ,method: :delete do %>
                     <i class = 'fas fa-sign-out-alt'></i>
                     ログアウト
                   <% end %>
                 </li>
+              <!--管理者も一般社員もログインしていない時-->
               <% else %>
                 <li class="nav-item">
                   <%= link_to about_path,class:'nav-link text-light' do %>
@@ -97,20 +100,20 @@
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to new_customer_registration_path,class:'nav-link text-light' do %>
+                  <%= link_to new_staff_registration_path,class:'nav-link text-light' do %>
                     <i class = "fas fa-user-plus"></i>
                     新規登録
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to new_customer_session_path,class:'nav-link text-light' do %>
+                  <%= link_to new_staff_session_path,class:'nav-link text-light' do %>
                     <i class = "fas fa-sign-in-alt"></i>
                     ログイン
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to new_admin_session_path, class:'navbar-brand p-1' do %>
-                    <i class = 'fas fa-store'></i>
+                  <%= link_to new_admin_session_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-user-lock'></i>
                     管理者ログイン
                   <% end %>
                 </li>
