--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,5 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<div class="container-xl text-center" style="margin:30px">
+    <div class="row mx-auto">
+        <h1>ようこそ連絡ネットへ！</h1>
+    </div>
+</div>
