[Update]top/about画面作成_2023-0215-2141

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,9 @@
-<div class="container-xl text-center" style="margin:30px">
-    <div class="row mx-auto">
-        <h1>ようこそ連絡ネットへ！</h1>
+<div class="container text-center" style="margin-top:30px">
+    <div class="row" style="margin:60px">
+        <div class="col-8 mx-auto">
+            <h1 class="text-center" style="font-size:50px">
+                <strong>ようこそ連絡ネットへ！</strong>
+            </h1>
+        </div>
     </div>
 </div>
