--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,25 +44,31 @@
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to admin_departments_path,class:'nav-link text-light' do %>
+                  <%= link_to public_department_names_path,class:'nav-link text-light' do %>
                     <i class = 'fas fa-building'></i>
-                    組織一覧
+                    部名一覧
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to admin_positons_path,class:'nav-link text-light' do %>
+                  <%= link_to public_division_names_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-building'></i>
+                    課名一覧
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to public_positon_names_path,class:'nav-link text-light' do %>
                     <i class = 'fas fa-layer-group'></i>
                     役職一覧
                   <% end %>
                 </li>
                 <li class="nav-class">
-                  <%= link_to admin_search_staff_path,class:'nav-link text-light' do %>
+                  <%= link_to public_search_staff_path,class:'nav-link text-light' do %>
                     <i class='fas fa-magnifying-glass'></i>
                     検索
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to destroy_admin_session_path,class:'nav-link text-light' ,method: :delete do %>
+                  <%= link_to destroy_session_path,class:'nav-link text-light' ,method: :delete do %>
                     <i class = 'fas fa-sign-out-alt'></i>
                     ログアウト
                   <% end %>
@@ -114,13 +120,6 @@
                     ログイン
                   <% end %>
                 </li>
-                <!--管理者ログインのボタン→admin_deviseが不要になったためコメントアウト-->
-                <!--<li class="nav-item">-->
-                  <%#= link_to new_admin_session_path,class:'nav-link text-light' do %>
-                    <!--<i class = 'fas fa-user-lock'></i>-->
-                    <!--管理者ログイン-->
-                  <%# end %>
-                <!--</li>-->
               <% end %>
             </ul>
           </div>
