--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,2 +1,20 @@
-<h1>Public::Homes#about</h1>
-<p>Find me in app/views/public/homes/about.html.erb</p>
+<div class="container text-center" style="marigin-top:30px">
+  <div class="row" style="margin:60px">
+    <div class="col-8 mx-auto">
+      <h2 class="text-center" style="font-size:50px">
+        <strong>連絡ネットについて</strong>
+      </h2>
+    </div>
+  </div>
+  <div class="row" style="margin-top:20px">
+    <div class="col-12 mx-auto">
+      <span class="text-center" style="font-size:25px">
+        社員の見える化を実現できる管理・検索サイトです。<br>
+        リモートワーク下で誰がどこに所属しているのか？<br>
+        どんな顔をしているのか等が見えづらくなっているため、<br>
+        「誰が、どこに所属しているのか、誰と同じ部署なのか、<br>
+        どんな顔をしているのか」把握するためにご活用ください。
+      </span>
+    </div>
+  </div>
+</div>
