--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,9 +55,9 @@
                     役職一覧
                   <% end %>
                 </li>
-                <li class="nav-class">
+                <li class="nav-item">
                   <%= link_to public_search_staff_path,class:'nav-link text-light' do %>
-                    <i class='fas fa-magnifying-glass'></i>
+                    <i class = 'fas fa-filter'></i>
                     検索
                   <% end %>
                 </li>
@@ -84,7 +84,7 @@
                 </li>
                 <li class="nav-item">
                   <%= link_to public_search_staff_path,class:'nav-link text-light' do %>
-                    <i class='fas fa-solid fa-Q'></i>
+                    <i class = 'fas fa-solid fa-users'></i>
                     検索
                   <% end %>
                 </li>
