--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,7 +84,7 @@
                 </li>
                 <li class="nav-item">
                   <%= link_to public_search_staff_path,class:'nav-link text-light' do %>
-                    <i class = 'fas fa-solid fa-users'></i>
+                    <i class = 'fas fa-solid fa-filter'></i>
                     検索
                   <% end %>
                 </li>
