[Update]モデル設定再構築_2023-0219-1838

--- a/app/views/public/staffs/index.html.erb
+++ b/app/views/public/staffs/index.html.erb
@@ -25,9 +25,9 @@
           </td>
           <!--アソシエーションを組んでいるdepartmentsテーブルから、departments_name_id/division_name_idの情報をまとめたものを表示させる-->
           <!--full_affiliationの定義は、app/models/staff.rbを参照-->
-          <td><%#= staff.full_affiliation %></td>
+          <td><%= staff.department_names.first.name %>/<%= staff.division_names.first.name %></td>
           <!--アソシエーションで組んでいるpositonsテーブルから、該当する役職のname_id情報を表示させる。-->
-          <td><%#= staff.positions.staff_id %></td>
+          <td><%= staff.position_names.first.name %></td>
           <td><%= staff.telephone_number %></td>
           <td><%= staff.email %></td>
         </tbody>
