--- a/app/views/public/staffs/show.html.erb
+++ b/app/views/public/staffs/show.html.erb
@@ -50,7 +50,7 @@
               <% if @staffs.is_admin == true %>
                 <div class= "text-success">管理者</div>
               <% else %>
-                <div class="text-muted">閲覧検索のみ</div>
+                <div class="text-muted">一般</div>
               <% end %>
             <%# else %>
             <%# end %>
