[Update]staff_edit_2023-0220-0843

--- a/app/views/public/staffs/edit.html.erb
+++ b/app/views/public/staffs/edit.html.erb
@@ -9,6 +9,7 @@
       <%= form_with model: @staffs,url:public_staff_path(@staffs) ,local:true do |f| %>
         <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
           <thead class="col-3">
+            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">社員画像</th>
             <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label:full_name,"氏名" %></th>
             <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :full_name_kana,"フリガナ" %></th>
             <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :department_names,"所属部名" %></th>
@@ -20,6 +21,8 @@
             <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :is_admin,"管理者フラグ" %></th>
           </thead>
           <tbody class="col-9">
+            <!--ActiveStrageで社員画像を挿入。モデルおよび、staffコントローラのパラメータで許可するを追記済み-->
+            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%#= f.file_filed :image, accept: "image/*" %></td>
             <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
               <%= f.text_field :last_name ,placeholder: "姓", :size=>"20" %>
               &emsp;&emsp;
