[Update]アプリケーションの再構築_2023-0221-2019

--- a/app/views/public/departments/edit.html.erb
+++ b/app/views/public/departments/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::DepartmentNames#edit</h1>
+<h1>Public::Departments#edit</h1>
 <p>Find me in app/views/public/department_names/edit.html.erb</p>
