--- a/app/views/public/departments/index.html.erb
+++ b/app/views/public/departments/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::DepartmentNames#index</h1>
+<h1>Public::Departments#index</h1>
 <p>Find me in app/views/public/department_names/index.html.erb</p>
