--- a/app/views/public/departments/update.html.erb
+++ b/app/views/public/departments/update.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::DepartmentNames#update</h1>
+<h1>Public::Departments#update</h1>
 <p>Find me in app/views/public/department_names/update.html.erb</p>
