--- a/app/views/public/divisions/index.html.erb
+++ b/app/views/public/divisions/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::DivisionNames#index</h1>
+<h1>Public::Divisions#index</h1>
 <p>Find me in app/views/public/division_names/index.html.erb</p>
