--- a/app/views/public/positions/create.html.erb
+++ b/app/views/public/positions/create.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::PositionNames#create</h1>
+<h1>Public::Positions#create</h1>
 <p>Find me in app/views/public/position_names/create.html.erb</p>
