--- a/app/views/public/staffs/index.html.erb
+++ b/app/views/public/staffs/index.html.erb
@@ -24,7 +24,7 @@
             <% end %>
           </td>
           <!--アソシエーションを組んでいるdepartmentsテーブルから、departments_name_id/division_name_idの情報をまとめたものを表示させる-->
-          <td><%= staff.department_names.first.name %>/<%= staff.division_names.first.name %></td>
+          <td><%#= staff.organization.dev.first.name %>/<%#= staff.division_names.first.name %></td>
           <!--アソシエーションで組んでいるpositonsテーブルから、該当する役職のname_id情報を表示させる。-->
           <td><%= staff.position_names.first.name %></td>
           <td><%= staff.telephone_number %></td>
