--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,19 +38,19 @@
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to public_department_names_path,class:'nav-link text-light' do %>
+                  <%= link_to public_departments_path,class:'nav-link text-light' do %>
                     <i class = 'fas fa-building'></i>
                     部名一覧
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to public_division_names_path,class:'nav-link text-light' do %>
+                  <%= link_to public_divisions_path,class:'nav-link text-light' do %>
                     <i class = 'fas fa-building'></i>
                     課名一覧
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to public_position_names_path,class:'nav-link text-light' do %>
+                  <%= link_to public_positions_path,class:'nav-link text-light' do %>
                     <i class = 'fas fa-layer-group'></i>
                     役職一覧
                   <% end %>
