--- a/app/views/public/divisions/create.html.erb
+++ b/app/views/public/divisions/create.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::DivisionNames#create</h1>
+<h1>Public::Divisions#create</h1>
 <p>Find me in app/views/public/division_names/create.html.erb</p>
