--- a/app/views/public/divisions/edit.html.erb
+++ b/app/views/public/divisions/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::DivisionNames#edit</h1>
+<h1>Public::Divisions#edit</h1>
 <p>Find me in app/views/public/division_names/edit.html.erb</p>
