--- a/app/views/public/divisions/update.html.erb
+++ b/app/views/public/divisions/update.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::DivisionNames#update</h1>
+<h1>Public::Divisions#update</h1>
 <p>Find me in app/views/public/division_names/update.html.erb</p>
