--- a/app/views/public/positions/edit.html.erb
+++ b/app/views/public/positions/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::PositionNames#edit</h1>
+<h1>Public::Positions#edit</h1>
 <p>Find me in app/views/public/position_names/edit.html.erb</p>
