--- a/app/views/public/positions/index.html.erb
+++ b/app/views/public/positions/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::PositionNames#index</h1>
+<h1>Public::Positions#index</h1>
 <p>Find me in app/views/public/position_names/index.html.erb</p>
