--- a/app/views/public/positions/update.html.erb
+++ b/app/views/public/positions/update.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::PositionNames#update</h1>
+<h1>Public::Positions#update</h1>
 <p>Find me in app/views/public/position_names/update.html.erb</p>
