--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,3 +1,16 @@
+<!--社員登録画面-->
+<div class="container text-center" style="margin-top:30px">
+  <div class="row mx-auto" style="margin:30px">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
+      <h3>新規登録</h3>
+    </div>
+  </div>
+  <div class="row mx-auto">
+    <%= form_with model: @staff,url:new_staff_registration_path , local: true do |f| %>
+    <% end %>
+  </div>
+</div>
+<!--↓以下、初期記述。所定の記述をするまでは保存-->
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
