--- a/app/views/public/staffs/index.html.erb
+++ b/app/views/public/staffs/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row" style="margin:20px">
     <h5 class="text-left">社員一覧</h5>
   </div>
-  <div class="row mx-auto">
+  <div class="row">
     <div class = "col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0">
       <table class="table table-bordered border-bg">
         <thead class="bg-success text-white">
