--- a/app/views/public/positions/index.html.erb
+++ b/app/views/public/positions/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Public::Positions#index</h1>
-<p>Find me in app/views/public/position_names/index.html.erb</p>
+<div class="container" style="margin:30px">
+  <div class="row">
+    <h5 class="text-left">登録役職一覧</h5>
+  </div>
+  <div class="row">
+    <!--役職の追加欄を作成-->
+  </div>
+  <div class="row" style="margin-top:20px">
+
+  </div>
+</div>
