--- a/app/views/public/positions/edit.html.erb
+++ b/app/views/public/positions/edit.html.erb
@@ -1,1 +1,16 @@
-<div class="container" 
+<div class="container" style="margin:30px">
+  <div class="row d-flex justify-content-center" style="margin-top:20px">
+    <h5 class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">役職情報編集画面</h5>
+  </div>
+  <div class="row d-flex justify-content-center" style="margin-top:20px">
+    <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <%= form_with model: @positions,url:public_position_path(@positions),local:true do |f| %>
+        <%= f.label:name,"役職名" %>
+        <%= f.text_field:name,placeholder:"役職名" %>
+        <div class ="col mt-5 d-flex justify-content-center">
+          <%= f.submit "変更内容を保存",class:'btn btn-success' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
